--- a/allonsy/allonsy_main/templates/allonsy/org.html
+++ b/allonsy/allonsy_main/templates/allonsy/org.html
@@ -1,12 +1,50 @@
-{% extends "allonsy/allonsy_base.html" %}
+{% extends "allonsy/org_base.html" %}
 
-{% block content %}
+{% block orgcontent %}
 
-        <!--Create meeple info-->
+<div class="row expanded">
+    <div class="columns small-12 small-centered" style="background-color:#666666;">
+         <div class="row">
+            <div class="columns small-12">
+                <div style="width:100%; height:150px;">
+                    <h2 style="padding: 50px 0;"><center>{{ org_obj.org_FullName }}</center></h2>
+                </div>
+            </div>
+         </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="columns small-9">
+        <div class="row">
+            <div class="columns small-12">
+                <label> You're a member. Join the conversation:
+                <div class="input-group">
+                  <input class="input-group-field" type="text">
+                  <div class="input-group-button">
+                    <input type="submit" class="button default-accent" value="Submit">
+                  </div>
+                </div>
+                </label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="columns small-12">
+                <h5>Posts</h5>
+                <div class="columns small-12">
+                    Test post
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="columns small-3">
+        test
+    </div>
+</div>
 
 
 {{ current_user }} <br>
 {{ current_user_auth }} <br>
 {{ org_short_name }}
 
-{% endblock content %}
+{% endblock orgcontent %}
