--- a/allonsy/allonsy_main/templates/allonsy/roles_base.html
+++ b/allonsy/allonsy_main/templates/allonsy/roles_base.html
@@ -7,7 +7,7 @@
       <div class="columns small-2">
          <div class="row">
             <div class="columns small-12">
-                <center><img class="img-circle-sm" src="http://i.imgur.com/lnRFVtA.jpg" /></center>
+                <center><img class="img-circle-sm" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/1/005/073/1b3/0e6455d.jpg" /></center>
             </div>
             <div class="columns small-12">
                <h5><center>{{req_user.first_name}} {{req_user.last_name}}</center></h5>
