--- a/allonsy/allonsy_main/templates/allonsy/user_base.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_base.html
@@ -14,7 +14,8 @@
             <div class="row">
             <div class="columns small-6 small-centered medium-6 medium-centered large-12">
             <!-- <div style="background-color:#333; width:200px; height:200px;"> -->
-              <img class="img-circle-lg" src="http://i.imgur.com/lnRFVtA.jpg" />
+              <img class="img-circle-lg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/1/005/073/1b3/0e6455d.jpg" />
+              <!-- <img class="img-circle-lg" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/01f/316/1f551bc.jpg" /> -->
             </div>
             </div>
           </div>
@@ -30,19 +31,26 @@
               </div>
               <div class="row">
                 <div class="columns small-12">
-                  <h5>{{ req_userextension.user_role_name }}</h5>
+                  <!-- <h5>{{ req_userextension.user_role_name }}</h5> -->
+                  <h5>Senior</h5>
                 </div>
               </div>
               <div class="row">
+                <div class="columns small-12">
+                  <!-- <h5>{{ req_userextension.user_role_name }}</h5> -->
+                  <h5>Example University College of Arts and Sciences</h5>
+                </div>
+              </div>
+              <!-- <div class="row">
                 <div class="columns small-12">
                   {% for org in orgs_primary %}
                   <h5>{{ org.relation_name }}</h5>
                   {% endfor %}
                 </div>
-              </div>
+              </div> -->
               <div class="row">
                 <div class="columns small-12">
-                  <h5>Building and office/room</h5>
+                  <h5>West Hall - Room 220</h5>
                 </div>
               </div>
               <div class="row">
